# claude-sessions

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
claude_sessions/: __init__.py  export.py  models.py  parser.py  query.py
claude_sessions/realtime/: __init__.py  async_watcher.py  cli.py  emitter.py  events.py  filters.py  formatters.py  live.py  metrics.py  parser.py  prometheus_server.py  state.py  tailer.py  watcher.py  webhook.py
docs/: realtime-analysis-impl-summary.md  realtime-analysis-plan.md
examples/: README.md  export_all_to_markdown.py  realtime_demo.py  slack_webhook.py  structured_logging.py
tests/: __init__.py  conftest.py  test_claude_sessions.py  test_export.py  test_models.py  test_parser.py  test_query.py
tests/realtime/: __init__.py  test_async_watcher.py  test_emitter.py  test_events.py  test_filters.py  test_formatters.py  test_live.py  test_metrics.py  test_parser.py  test_state.py  test_tailer.py  test_watcher_integration.py  test_webhook.py
