[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-sessions"
version = "0.1.0"
description = "Parse and analyze Claude Code session data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["claude", "ai", "sessions", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
claude-sessions = "claude_sessions.realtime.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
realtime = ["watchdog>=3.0"]
webhook = ["requests>=2.28"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
all = ["pandas>=2.0", "watchdog>=3.0", "requests>=2.28"]

[project.urls]
"Homepage" = "https://github.com/yourusername/claude-sessions"

[tool.setuptools.packages.find]
where = ["."]
